--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,11 @@
 
     <ImageView
         android:id="@+id/login_icon"
-        android:layout_width="320dp"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:src="@drawable/icon_accout_login" />
+        android:src="@mipmap/insta_icon_foreground" />
 
     <EditText
         android:id="@+id/username_input"
@@ -58,5 +58,15 @@
         android:textColor="@color/white"
         android:background="@drawable/rounded_corner"
         android:padding="18dp" />
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/login_btn"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:text="Forgot Password or Username?"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
 </RelativeLayout>
